# rust-analyzer

crates/ide/: Cargo.toml
crates/ide/src/syntax_highlighting/: tags.rs
crates/ide_db/: Cargo.toml
crates/ide_db/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
ide/: enum.HlMod.html  enum.HlPunct.html  enum.HlTag.html  struct.Highlight.html  struct.HlMods.html
src/ide/syntax_highlighting/: tags.rs.html
